<resources>
    <string name="app_name">Color Cards</string>
    <string name="Existing_Game_Info">ExistingGameInfo</string>
    <string name="results_for_level">Results for Level</string>
    <string name="you_completed_level">You completed Level</string>
    <string name="you_reached_level">You reached Level</string>
    <string name="to_progress_to_level">To progress to Level</string>
    <string name="you_made">You made </string>
    <string name="you_skipped_the_instructions">You skipped the instructions</string>
    <string name="return_home">Return Home</string>
    <string name="instructions">Instructions</string>
    <string name="pick_the">Pick the</string>
    <string name="card">card</string>
    <string name="correct">Correct:</string>
    <string name="skipped">Skipped:</string>
    <string name="wrong">Wrong:</string>
    <string name="loading_game">Loading game…</string>
    <string name="points">Points: </string>
    <string name="points_exclamation">points!</string>
    <string name="_00_00">00:00</string>
    <string name="_1min">+1min</string>
    <string name="game_over">GAME OVER</string>
    <string name="red">RED</string>
    <string name="pink">PINK</string>
    <string name="purple">PURPLE</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="orange">ORANGE</string>
    <string name="brown">BROWN</string>
    <string name="grey">GREY</string>
    <string name="black">BLACK</string>
    <string name="white">WHITE</string>
    <string name="yes_cancel">YES, CANCEL</string>
    <string name="no_stay">NO, STAY</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="you_did_not_get_anything_wrong">You did not get anything wrong. Well done!</string>
    <string name="you_did_not_skip_any_card">You did not skip any card. This means you think and react very fast!</string>
    <string name="time_is_up">Time is up!</string>
    <string name="you_did_not_gather_enough_points">Sorry, you did not gather enough points.</string>
    <string name="complete_this_level">Complete this level by extending your time, or try again.</string>
    <string name="switching_to_instructions">Switching to Instructions</string>
    <string name="you_are_in_the_middle_of_a_game_continue">You are in the middle of a game. Do you want to continue to the instructions?</string>
    <string name="game_paused">Game Paused</string>
    <string name="the_game_is_currently_paused">The game is currently paused. We\'re waiting for you to come back.</string>
    <string name="cancelling_game">Cancelling Game</string>
    <string name="you_are_about_to_quit_this_game">You are about to quit this game and lose all your progress. Do you really wish to cancel?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_ve_reached">You\'ve reached</string>
    <string name="pause">Pause</string>
    <string name="view_instructions">View Instructions</string>
    <string name="quit_game">Quit Game</string>
    <string name="you_ve_received">You\'ve received</string>
    <string name="more">More</string>
    <string name="get_one_minute_bonus">Get 1 Minute Bonus</string>
    <string name="ad_policy_message">You are about to view an ad in exchange for one extra minute to finish this level.</string>
    <string name="proceed_confirmation">Do you wish to proceed?</string>
    <string name="new_game">NEW GAME</string>
    <string name="play_now">PLAY NOW</string>
    <string name="resume_game">RESUME GAME</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="brain_game_app_for_kids_and_adults">*Brain game app for kids and adults.</string>
    <string name="error_with_the_instructions">There was an error loading instructions.</string>
    <string name="only">only</string>
    <string name="only_once">only once</string>
    <string name="error_loading_reward">Error loading the reward ad video.</string>
</resources>
