<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView_CorrectResultLabel"
            style="@style/MetaData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct" />

        <TextView
            android:id="@+id/textView_CorrectResult"
            style="@style/MetaData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView_WrongResultLabel"
            style="@style/MetaData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong" />

        <TextView
            android:id="@+id/textView_WrongResult"
            style="@style/MetaData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView_SkippedResultLabel"
            style="@style/MetaData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skipped" />

        <TextView
            android:id="@+id/textView_SkippedResult"
            style="@style/MetaData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>