<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:gravity="center_horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textView_LevelPointsLabel"
        style="@style/MetaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/points"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_LevelPoints"
        style="@style/MetaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/textView_LevelPointsLabel"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_LevelPointsSlash"
        style="@style/MetaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/textView_LevelPoints"
        android:text=" / "
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView_LevelPointsToReach"
        style="@style/MetaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/textView_LevelPointsSlash"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/imageView_Time"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/alarm_clock_20"
        android:layout_toEndOf="@id/textView_LevelPointsToReach"/>

    <TextView
        android:id="@+id/textView_Timer"
        style="@style/MetaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/imageView_Time"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/imageView_Time"
        android:text="@string/_00_00"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_Bonus"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignBaseline="@id/imageView_Time"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/textView_Timer"
        android:background="@color/colorPrimaryLight"
        android:text="@string/_1min"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>